--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <!-- </div> -->
         <!-- Second Card (Ads) -->
 
-        <div class="card-3d-wrap" style="height: 470px">
+        <div class="card-3d-wrap ads" style="height: 470px">
           <h4 class="card-heading">OUR LATEST AD</h4>
 
           <div class="ad-section" style="top: 45px">
