--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <div class="card-3d-wrap ads" style="height: 470px">
           <h4 class="card-heading">OUR LATEST AD</h4>
 
-          <div class="ad-section" style="top: 45px">
+          <div class="ad-section">
             <img src="pics/hosh.png" alt="Ad Image" />
           </div>
         </div>
