--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Sui Southern Gas Company Limited</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome for social icons -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
@@ -555,7 +554,7 @@
             />
 
             <span class="rnlg">
-              RLNG Domestic Gas Connection Forms & Approved Societies lists &
+              RLNG Domestic Gas Connection Forms & Approved <br> Societies lists &
               Details
             </span>
           </a>
