--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="update.css" />
   </head>
 
   <body>
@@ -94,7 +94,9 @@
         </div>
         <div class="nav-links">
           <div class="sidebar-logo">
-            <span class="logo-name">SSGC</span>
+            <!-- <span class="logo-name">SSGC</span> -->
+            <img src="pics/white.svg" alt="SSGC logo" class="h-8" />
+
             <i class="bx bx-x"></i>
           </div>
           <ul class="links">
