--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="update.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
